--- a/views/index.html
+++ b/views/index.html
@@ -1,4 +1,29 @@
 {{define "content"}}
-contentd
-{{include "partials/message"}}
+<div class="container">
+
+
+  <form method="post" enctype="multipart/form-data" id="myform">
+
+    <div class="mb-3">
+      <label for="" class="form-label">Choose file</label>
+      <input type="file" class="form-control" name="file" id="" placeholder="" aria-describedby="fileHelpId">
+      <div id="fileHelpId" class="form-text">Help text</div>
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+</div>
+<script>
+  let myform = document.getElementById("myform");
+  myform.addEventListener('submit', function (e) {
+    e.preventDefault()
+    console.log(111);
+  })
+
+
+
+
+
+
+</script>
+
 {{end}}
