--- a/views/layouts/master.html
+++ b/views/layouts/master.html
@@ -6,9 +6,10 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="/static/css/bootstrap.css">
 
   <!-- Bootstrap CSS v5.2.0-beta1 -->
-  
+
 
 </head>
 
@@ -16,7 +17,7 @@
   {{include "layouts/header" }}
   {{template "content" .}}
   {{include "layouts/footer" }}
- 
+
 </body>
 
 </html>
